# data_structure

./: .gitignore  CMakeLists.txt  xmake.lua
src/: main.c
src/linked_list/: ops.c  ops.h  type.h
